--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
     <nav class="nav">
         <div class="nav__container">
-            <figure>
-                <img src="images/logo.svg" alt="logo">
-            </figure>
-            
+            <div class="nav__section1">
+                <figure>
+                    <img src="images/logo.svg" alt="logo">
+                </figure>
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#">Features</a></li>
+                    <li class="nav__item"><a href="#">Company</a></li>
+                    <li class="nav__item"><a href="#">Careers</a></li>
+                    <li class="nav__item"><a href="#">About</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <main class="main">
