--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="nav">
         <div class="nav__container">
-            <div class="nav__section1">
+            <div class="nav__section">
                 <figure>
                     <img src="images/logo.svg" alt="logo">
                 </figure>
@@ -21,6 +21,7 @@
                     <li class="nav__item"><a href="#">About</a></li>
                 </ul>
             </div>
+            <div class="nav__section"></div>
         </div>
     </nav>
     <main class="main">
