--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <title>Snap</title>
 </head>
 <body>
@@ -21,7 +22,10 @@
                     <li class="nav__item"><a href="#">About</a></li>
                 </ul>
             </div>
-            <div class="nav__section"></div>
+            <div class="nav__section">
+                <button class="nav__button">Login</button>
+                <button class="nav__button nav__button--register">Register</button>
+            </div>
         </div>
     </nav>
     <main class="main">
