--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="shortcut icon"
+      href="images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>Snap</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="nav">
-        <div class="nav__container">
-            <div class="nav__section">
-                <figure>
-                    <img src="images/logo.svg" alt="logo">
-                </figure>
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#">Features</a></li>
-                    <li class="nav__item"><a href="#">Company</a></li>
-                    <li class="nav__item"><a href="#">Careers</a></li>
-                    <li class="nav__item"><a href="#">About</a></li>
-                </ul>
-            </div>
-            <div class="nav__section">
-                <button class="nav__button">Login</button>
-                <button class="nav__button nav__button--register">Register</button>
-            </div>
+      <div class="nav__container">
+        <div class="nav__section">
+          <figure>
+            <img src="images/logo.svg" alt="logo" />
+          </figure>
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#">Features</a></li>
+            <li class="nav__item"><a href="#">Company</a></li>
+            <li class="nav__item"><a href="#">Careers</a></li>
+            <li class="nav__item"><a href="#">About</a></li>
+          </ul>
         </div>
+        <div class="nav__section">
+          <button class="nav__button">Login</button>
+          <button class="nav__button nav__button--register">Register</button>
+        </div>
+        <div class="hamburguer">
+          <div class="close__menu"></div>
+        </div>
+      </div>
     </nav>
-    <main class="main">
-
-    </main>
-</body>
+    <main class="main"></main>
+  </body>
 </html>
