--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <nav class="nav">
-        <div class="nav__container">
-            <div class="nav__section">
+        <div class="nav__container container">
+            <div class="nav__section-left">
                 <figure>
                     <img src="images/logo.svg" alt="logo">
                 </figure>
@@ -22,7 +22,7 @@
                     <li class="nav__item"><a href="#">About</a></li>
                 </ul>
             </div>
-            <div class="nav__section">
+            <div class="nav__section-right">
                 <button class="nav__button">Login</button>
                 <button class="nav__button nav__button--register">Register</button>
             </div>
