--- a/index.html
+++ b/index.html
@@ -18,8 +18,47 @@
                     <img src="images/logo.svg" alt="logo">
                 </figure>
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#">Features</a></li>
-                    <li class="nav__item"><a href="#">Company</a></li>
+                    <li class="nav__item"><a href="#">Features</a>
+                        <ul>
+                            <li class="nav__subitem">
+                                <img
+                  src="images/icon-todo.svg"
+                  alt=""
+                  class="features-item-icon"
+                />
+                                <a href="#">Todo List</a>
+                            <li class="nav__subitem">
+                                <img
+                  src="images/icon-calendar.svg"
+                  alt=""
+                  class="features-item-icon"
+                />
+                                <a href="#">Calendar</a>
+                            <li class="nav__subitem">
+                                <img
+                  src="images/icon-reminders.svg"
+                  alt=""
+                  class="features-item-icon"
+                />
+                                <a href="#">Reminders</a>
+                            <li class="nav__subitem">
+                                <img
+                  src="images/icon-planning.svg"
+                  alt=""
+                  class="features-item-icon"
+                />
+                                <a href="#">Planning</a>
+                        </ul>                            
+                    </li>
+                    
+                    <li class="nav__item"><a href="#">Company</a>
+                        <ul>
+                            <li class="nav__subitem"><a href="#">History</a>
+                            <li class="nav__subitem"><a href="#">Our Team</a>
+                            <li class="nav__subitem"><a href="#">Blog</a>
+                            
+                        </ul>    
+                    </li>
                     <li class="nav__item"><a href="#">Careers</a></li>
                     <li class="nav__item"><a href="#">About</a></li>
                 </ul>
