--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
                 <button class="nav__button">Login</button>
                 <button class="nav__button nav__button--register">Register</button>
             </div>
-            <div class="hamburguer">
+            <div class="nav__hamburguer">
                 <div class="close__menu"></div>
             </div>
+        </div>
     </nav>
-    <main class="main"></main>
+    <main class="main">
+
+    </main>
 </body>
 
 </html>
