--- a/index.html
+++ b/index.html
@@ -1,64 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>Snap</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="nav">
-        <div class="nav__container container">
-            <div class="nav__section-left">
-                <figure>
-                    <img src="images/logo.svg" alt="logo">
-                </figure>
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#">Features</a>
-                        <ul>
-                            <li class="nav__subitem">
-                                <img src="images/icon-todo.svg" alt="" class="features-item-icon" />
-                                <a href="#">Todo List</a>
-                            <li class="nav__subitem">
-                                <img src="images/icon-calendar.svg" alt="" class="features-item-icon" />
-                                <a href="#">Calendar</a>
-                            <li class="nav__subitem">
-                                <img src="images/icon-reminders.svg" alt="" class="features-item-icon" />
-                                <a href="#">Reminders</a>
-                            <li class="nav__subitem">
-                                <img src="images/icon-planning.svg" alt="" class="features-item-icon" />
-                                <a href="#">Planning</a>
-                        </ul>
-                    </li>
-
-                    <li class="nav__item nav__item--company"><a href="#">Company</a>
-                        <ul>
-                            <li class="nav__subitem"><a href="#">History</a>
-                            <li class="nav__subitem"><a href="#">Our Team</a>
-                            <li class="nav__subitem"><a href="#">Blog</a>
-
-                        </ul>
-                    </li>
-                    <li class="nav__item"><a href="#">Careers</a></li>
-                    <li class="nav__item"><a href="#">About</a></li>
-                </ul>
-            </div>
-            <div class="nav__section-right">
-                <button class="nav__button">Login</button>
-                <button class="nav__button nav__button--register">Register</button>
-            </div>
-            <div class="nav__hamburguer">
-                <div class="close__menu"></div>
-            </div>
+      <div class="nav__container container">
+        <!-- ocutar menu hamburguesa -->
+        <div class="close-menu-icon">
+          <img src="images/icon-close-menu.svg" alt="close menu" />
         </div>
+        <div class="nav__section-left">
+          <figure>
+            <img src="images/logo.svg" alt="logo" />
+          </figure>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#">Features</a>
+              <ul>
+                <li class="nav__subitem">
+                  <img
+                    src="images/icon-todo.svg"
+                    alt=""
+                    class="features-item-icon"
+                  />
+                  <a href="#">Todo List</a>
+                </li>
+
+                <li class="nav__subitem">
+                  <img
+                    src="images/icon-calendar.svg"
+                    alt=""
+                    class="features-item-icon"
+                  />
+                  <a href="#">Calendar</a>
+                </li>
+
+                <li class="nav__subitem">
+                  <img
+                    src="images/icon-reminders.svg"
+                    alt=""
+                    class="features-item-icon"
+                  />
+                  <a href="#">Reminders</a>
+                </li>
+
+                <li class="nav__subitem">
+                  <img
+                    src="images/icon-planning.svg"
+                    alt=""
+                    class="features-item-icon"
+                  />
+                  <a href="#">Planning</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav__item nav__item--company">
+              <a href="#">Company</a>
+              <ul>
+                <li class="nav__subitem"><a href="#">History</a></li>
+                <li class="nav__subitem"><a href="#">Our Team</a></li>
+                <li class="nav__subitem"><a href="#">Blog</a></li>
+              </ul>
+            </li>
+            <li class="nav__item"><a href="#">Careers</a></li>
+            <li class="nav__item"><a href="#">About</a></li>
+          </ul>
+        </div>
+        <div class="nav__section-right">
+          <button class="nav__button">Login</button>
+          <button class="nav__button nav__button--register">Register</button>
+        </div>
+        <!-- hamburguesa -->
+        <div class="nav__hamburguer">
+          <img src="images/icon-menu.svg" alt="open menu" />
+        </div>
+      </div>
     </nav>
     <main class="main">
-
+      <div class="main__container container">
+        <!-- Descripcion -->
+        <section class="main__article">
+          <h1 class="main__heading"><span>Make</span><br />remote work</h1>
+          <p class="main__description">
+            Get your team in sync, no matter your location. Streamline
+            processes, create team rituals, and watch productivity soar.
+          </p>
+          <button class="main__button">Learn more</button>
+          <!-- clientes -->
+          <div class="client__section">
+            <img src="images/client-databiz.svg" alt="" class="databiz-logo" />
+            <img
+              src="images/client-audiophile.svg"
+              alt=""
+              class="audiophile-logo"
+            />
+            <img src="images/client-meet.svg" alt="" class="meet-logo" />
+            <img src="images/client-maker.svg" alt="" class="maker-logo" />
+          </div>
+          <!-- clientes fin-->
+        </section>
+        <figure class="main__img-container">
+          <img
+            class="main__img"
+            src="images/image-hero-desktop.png"
+            alt="imagen banner"
+          />
+        </figure>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
