--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <nav class="nav">
       <div class="nav__container container">
         <!-- ocutar menu hamburguesa -->
-        <div class="close-menu-icon">
-          <img src="images/icon-close-menu.svg" alt="close menu" />
-        </div>
+
         <div class="nav__section-left">
           <figure>
             <img src="images/logo.svg" alt="logo" />
@@ -84,7 +82,12 @@
         </div>
         <!-- hamburguesa -->
         <div class="nav__hamburguer">
-          <img src="images/icon-menu.svg" alt="open menu" />
+          <img src="images/icon-menu.svg" alt="" />
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
       </div>
     </nav>
@@ -120,5 +123,6 @@
         </figure>
       </div>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
