--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- ocutar menu hamburguesa -->
 
         <div class="nav__section-left">
-          <figure>
+          <figure class="figure">
             <img src="images/logo.svg" alt="logo" />
           </figure>
           <ul class="nav__list">
